--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                 </div>
                 
                 <p class="more-info">When you buy a Fat To Slim franchise, you'll be joining a team of experienced professionals who are committed to helping people live healthier, happier lives. Our proven business model, which is based on word-of-mouth referrals from satisfied clients, makes it easy to attract new customers and grow your business. And with our comprehensive training and ongoing support, you'll have all the tools you need to succeed.</p>
+    
               </div>
             </div>
           </div>
@@ -282,7 +283,8 @@
                 </div>
               </div>
               <div class="col-lg-8">
-                <form id="contact-form" action="" method="post">
+                <form id="contact-form" action="https:/formsubmit.co/shubhgajjar2004@gmail.com"
+                method="post">
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
