--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
                 </div>
               </div>
               <div class="col-lg-8">
-                <form id="contact-form" action="https:/formsubmit.co/shubhgajjar2004@gmail.com"
+                <form id="contact-form"  target="_blank"
+                action="https:/formsubmit.co/shubhgajjar2004@gmail.com"
                 method="post">
                   <div class="row">
                     <div class="col-lg-12">
