--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               </div>
               <div class="col-lg-8">
                 <form id="contact-form"  target="_blank"
-                action="https:/formsubmit.co/shubhgajjar2004@gmail.com"
+                action="mailto:shubhgajjar2004@gmail.com"
                 method="post">
                   <div class="row">
                     <div class="col-lg-12">
