--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo.png" alt="" style="max-width: 112px;">
+              <img src="assets/images/logo2.png" alt="" style="max-width: 112px; filter: invert(1); margin-top: 10px; ">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
