--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#infos">Join us</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
-              <li class="has-sub">
+              <li class="scroll-to-section" ><a href="https://verdant-capybara-aa738d.netlify.app/chat" style="color: yellow; border: 1ch; border-color: yellow;">Chat</a></li>
+
+              <!-- <li class="has-sub">
                 <a href="javascript:void(0)">Pages</a>
                 <ul class="sub-menu">
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="faqs.html">FAQs</a></li>
                 </ul>
-              </li>
+              </li> -->
               <!-- <li class="scroll-to-section"><a href="#contact">Contact</a></li> -->
             </ul>
             <a class='menu-trigger'>
@@ -112,7 +114,7 @@
             <h4>Fat to slim <em>Eat</em> Sleep <span>No exercise</span></h4>
             <p>It's an Indian based diet, where we use kitchen spices to work on your metabolism .<a href="index.html">Home</a>, <a
                 href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
-            <div class="main-button scroll-to-section"><a href="#services">Let's magic begin </a></div>
+            <div class="main-button scroll-to-section"><a href="https://verdant-capybara-aa738d.netlify.app/client">Let's magic begin </a></div>
             <!-- <span>or</span> -->
             <!-- <div class="second-button"><a href="faqs.html">Check our FAQs</a></div> -->
           </div>
@@ -254,7 +256,7 @@
                   <div class="line-dec"></div>
                   <p>Looking to start your own nutrition and diet business? Look no further than Fat To Slim! As a leading Indian-based diet and nutrition service, we specialize in creating personalized nutrition plans that are based on traditional Indian home cooking. With over 30,000 satisfied clients across India and around the world, we're a trusted expert in the field of nutrition and weight loss.</p>
 
-                    <div class="second-button" style="margin-top: 40px;"><a href="#">Explore franchise opportunities</a></div>
+                    <div class="second-button" style="margin-top: 40px;"><a href="https://verdant-capybara-aa738d.netlify.app/franchise">Explore franchise opportunities</a></div>
 
                 </div>
                 
