--- a/index.html
+++ b/index.html
@@ -285,9 +285,7 @@
                 </div>
               </div>
               <div class="col-lg-8">
-                <form id="contact-form"  target="_blank"
-                action="mailto:shubhgajjar2004@gmail.com"
-                method="post">
+                <form id="contact-form">
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
@@ -367,6 +365,9 @@
       </div>
     </div>
   </footer>
+
+
+  <script src="js\contact.js"></script>
 
 
   <!-- Scripts -->
