--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
             <h6>SAS Fat to Slim</h6>
             <div class="line-dec"></div>
             <h4>Fat to slim <em>Eat</em> Sleep <span>No exercise</span></h4>
-            <p>It's an Indian based diet, where we use kitchen spices to work on your metabolism .<a href="index.html">Home</a>, <a
-                href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
+            <p>It's an Indian based diet, where we use kitchen spices to work on your metabolism .
             <div class="main-button scroll-to-section"><a href="https://verdant-capybara-aa738d.netlify.app/client">Let's magic begin </a></div>
             <!-- <span>or</span> -->
             <!-- <div class="second-button"><a href="faqs.html">Check our FAQs</a></div> -->
